samples/_failures_safe/1761434651_30e83b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2c167c1.c: In function ‘main’:
./samples/SAFE/__tmp_b2c167c1.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("  Compression ratio: %.2f%%\n", (1.0 - (double)result.size / test_size) * 100);
      |         ^~~~~~
./samples/SAFE/__tmp_b2c167c1.c:139:9: error: expected declaration or statement at end of input
